Add RUD operations on configs
